<resources>
    <string name="app_name">EcoCyam</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="register_here">Register here</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="msgNewAccount">Welcome in EcoCyam</string>
    <string name="ecoCyam_info">Ecocyam allows you to scan product to see their ecological grade.
   If the product is not registered yet, you can add his features</string>
    <string name="about_us">We are 4 students at the University of Nanterre </string>
    <string name="email_message">Body of your email : tell us whatever you want !</string>
    <string name="send_email">Send</string>
    <string name="email_subject">Subject</string>
    <string name="imageView_account">Account</string>
    <string name="msgModifyAccount">modify your user\'s information</string>
    <string name="modifyAccount">Save modification</string>
    <string name="ref_du_produit">Référence complète du produit</string>
    <string name="demander_ajout_du_produit">Demander ajout du produit</string>
    <string name="code_barre_ajout">Code barre du produit (si possible)</string>
    <string name="note_ecologique">Note ecologique</string>
    <string name="note_de_durabilit">Note de durabilité</string>
    <string name="note_utilisateur">Note utilisateur</string>
</resources>
