<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gradient_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_front_list"
    tools:context=".activities.LoginActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/imageViewSaveWorld"
        android:layout_width="154dp"
        android:layout_height="128dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/logoapplication" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/roundedittext"
        android:drawableStart="@drawable/ic_account_user"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="16sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/roundedittext"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNotRegisterYet"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textColor="#fff" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>