<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gradient_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_front_list"
    tools:context=".activities.CreateAccountActivity">
    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select"
        android:text="Select !"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
-->


    <ImageView
        android:id="@+id/imageViewSaveWorld"
        android:layout_width="154dp"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="91dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="197dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:background="@drawable/roundedittext"
        android:drawableStart="@drawable/ic_account_user"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSaveWorld"
        app:layout_constraintVertical_bias="0.201" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="197dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:background="@drawable/roundedittext"
        android:drawableStart="@drawable/ic_perm_identity"
        android:ems="10"
        android:hint="@string/first_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSaveWorld"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="197dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:background="@drawable/roundedittext"
        android:drawableStart="@drawable/ic_perm_identity"
        android:ems="10"
        android:hint="@string/last_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSaveWorld"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="508dp"
        android:background="@drawable/roundedittext"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="1dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="47dp"
                android:layout_marginBottom="16dp"
                android:text="@string/createAccount"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="160dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="28dp"
        android:textSize="16sp"
        android:textColor="#fff"
        android:text="@string/msgNewAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSaveWorld" />


</androidx.constraintlayout.widget.ConstraintLayout>