<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".activities.AddProductFormActivity">


    <ImageView
        android:id="@+id/imageViewSaveWorld"
        android:layout_width="422dp"
        android:layout_height="166dp"
        app:srcCompat="@drawable/fond_flatdesign_add_form" />

    <EditText
        android:id="@+id/editTextAddProductName"
        android:layout_width="305dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedittext"
        android:ems="10"
        android:hint="@string/ref_du_produit"
        android:textSize="16sp"
        android:maxLines="2"/>


    <Spinner
        android:id="@+id/spinnerCategorieProduitAdd"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedittext"
        android:ems="10"
        android:hint="@string/code_barre_ajout"
        android:textSize="16sp" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAddProduct"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demander_ajout_du_produit"
                android:textColor="#fff" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>